--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body.container{
 }
 
 
-.sidebar{
+aside.sidebar{
     background-color: lightblue;
     height: 100vh;
     width: 200px;
@@ -27,5 +27,10 @@ header.header{
 
 main.main{
     background-color: lightgreen;
-    
+
+}
+
+section.section{
+    background-color: bisque;
+    height: calc(100vh - 125px);
 }
