--- a/style.css
+++ b/style.css
@@ -141,9 +141,6 @@ header.header{
 }
 
 
-main.main{
-
-}
 
 section.section{
     height: calc(100vh - 145px);
@@ -152,12 +149,60 @@ section.section{
 }
 
 .projects-section{
-    background-color: lightpink;
-    width: 80%;
+    width:70%;
     height: 100%;
-
     padding: 5px 15px;
 }
+
+.project-card-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+}
+
+.project-card{
+    width: 350px;
+    height: 175px;
+    border: none;
+    background-color: white;
+    border-radius: 6px;
+
+    display: flex;
+
+}
+
+.color-bar{
+    width: 7px;
+    border-radius: 6px 0 0 6px;
+    height: 100%;
+    background-color: #F0B429 ;
+}
+
+.content-section{
+    padding: 25px 20px;
+    width: 100%;
+}
+
+.icon-section{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 30px;
+    gap: 15px;
+}
+
+.icon-section svg{
+    height: 1.5rem;
+}
+
+.project-title{
+    font-size: 0.75rem;
+    font-weight: bold;
+}
+
+.project-description{
+    font-size: 0.70rem;
+}
+
 
 .section-title{
     font-size: 0.9rem;
@@ -167,7 +212,7 @@ section.section{
 
 
 .announcements-and-trending-section{
-    width: 20%;
+    width: 30%;
     height: 100%;
     padding: 5px 15px;
     display: flex;
@@ -213,17 +258,13 @@ section.section{
     background-color: white;
     padding: 20px;
     border-radius: 8px;
-
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
     overflow: auto;
 }
 
 .trend{
     display: flex;
     gap: 10px;
-    margin-bottom: 10px;
+    margin-right: 10px;
 }
 .trending-img{
     height: 3rem;
